syntax = "proto3";

package tienlen.v1;

option go_package = "tienlen/proto;pb";

// Card represents a single Tien Len card.
message Card {
  enum Suit {
    SUIT_UNSPECIFIED = 0;
    SUIT_SPADES = 1;
    SUIT_HEARTS = 2;
    SUIT_DIAMONDS = 3;
    SUIT_CLUBS = 4;
  }
  Suit suit = 1;
  int32 rank = 2; // 0..12 where 3=0, A=11, 2=12
}

// Client -> Server requests
message StartGameRequest {}

message PlayCardsRequest {
  repeated Card cards = 1;
}

message PassTurnRequest {}

message RequestNewGameRequest {}

// Server -> Client events
message PlayerJoinedEvent {
  string user_id = 1;
  int32 seat = 2; // 1-based seat number
  bool owner = 3;
}

message PlayerLeftEvent {
  string user_id = 1;
}

message GameStartedEvent {
  string phase = 1;
}

message HandDealtEvent {
  repeated Card hand = 1;
}

message CardPlayedEvent {
  string user_id = 1;
  repeated Card cards = 2;
}

message TurnPassedEvent {
  string user_id = 1;
}

message GameEndedEvent {
  repeated string finish_order = 1;
}
